--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/cgwire/js-3d-model-viewer#readme",
   "dependencies": {
     "three": "0.148.0",
-    "three-orbit-controls": "^82.1.0"
+    "three-orbit-controls": "^82.1.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -36,7 +37,8 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.2.1",
-    "rollup": "^3.8.1",
+    "rollup": "^3.25.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "static-server": "^2.2.1"
   }
 }
